# bestiary

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adding-a-tool.md
src/bestiary/: cli.py  server.py
src/bestiary/core/: config.py  errors.py  plugin.py  validation.py
src/bestiary/tools/: arxiv.py  hackernews.py  reddit.py  stackexchange.py  youtube.py
tests/: test_arxiv.py  test_hackernews.py  test_reddit.py  test_stackexchange.py  test_youtube.py
